Updated API contract
